[tool.poetry]
name = "bisectnator"
version = "0.1.0"
description = "Keynav practice game"
authors = ["NotBru <brunom.ronchi@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
